--- a/admin/assets/css/styles.css
+++ b/admin/assets/css/styles.css
@@ -1,8 +1,8 @@
 /** Home Page **/
 body {
-	padding-top: 60px;
-	padding-bottom: 40px;
-	background-color: #f5f5f5;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
 }
 
 /** Login Page **/
@@ -18,11 +18,11 @@ body {
     background-color: #fff;
     border: 1px solid #e5e5e5;
     -webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
 #login .form-signin .form-signin-heading,
 #login .form-signin .checkbox {
@@ -38,164 +38,164 @@ body {
 
 /** 2 level sub menu **/
 .dropdown-menu-with-subs .sub-menu {
-	left: 100%;
-	position: absolute;
-	top: 0;
-	visibility: hidden;
-	margin-top: -1px;
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
 }
 
 .dropdown-menu-with-subs li:hover .sub-menu {
-	visibility: visible;
-	display: block;
+    visibility: visible;
+    display: block;
 }
 
 .navbar .sub-menu:before {
-	border-bottom: 7px solid transparent;
-	border-left: none;
-	border-right: 7px solid rgba(0, 0, 0, 0.2);
-	border-top: 7px solid transparent;
-	left: -7px;
-	top: 10px;
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
 }
 .navbar .sub-menu:after {
-	border-top: 6px solid transparent;
-	border-left: none;
-	border-right: 6px solid #fff;
-	border-bottom: 6px solid transparent;
-	left: 10px;
-	top: 11px;
-	left: -6px;
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+    border-bottom: 6px solid transparent;
+    left: 10px;
+    top: 11px;
+    left: -6px;
 }
 
 /** Global **/
 #content {
-	margin-left:0px;
+    margin-left:0px;
 }
 .hide-sidebar, .show-sidebar {
-	cursor: pointer;
+    cursor: pointer;
 }
 .padd-bottom {
-	margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 .breadcrumb {
-	margin: 0 0 0px;
-	padding: 10px 0px;
-	background-color: transparent;
+    margin: 0 0 0px;
+    padding: 10px 0px;
+    background-color: transparent;
 }
 
 .block {
-	border: 1px solid #ccc;
-	background: white;
-	margin: 1em 0em;
-	border-top: none;
+    border: 1px solid #ccc;
+    background: white;
+    margin: 1em 0em;
+    border-top: none;
 }
 
 .block-content {
-	margin: 1em;
-	min-height: .25em;
+    margin: 1em;
+    min-height: .25em;
 }
 
 .block-header {
-	margin-bottom: 0px;
-	border-right: none;
-	border-left: none;
-	-webkit-border-radius: 0px;
-	-moz-border-radius: 0px;
-	border-radius: 0px;
+    margin-bottom: 0px;
+    border-right: none;
+    border-left: none;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
 }
 .block-header div {
-	padding-top: 10px;
+    padding-top: 10px;
 }
 
 .easyPieChart {
-	margin: 0px auto;
+    margin: 0px auto;
 }
 
 .chart-bottom-heading {
-	margin-top: 5px;
-	text-align: center;
+    margin-top: 5px;
+    text-align: center;
 }
 
 /** Side Bar **/
 .bs-docs-sidenav {
-	max-width: 228px;
-	margin: 30px 0 0;
-	padding: 0;
-	background-color: #fff;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	-webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-	-moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-	box-shadow: 0 1px 4px rgba(0,0,0,.065);
+    max-width: 228px;
+    margin: 30px 0 0;
+    padding: 0;
+    background-color: #fff;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+    -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+    box-shadow: 0 1px 4px rgba(0,0,0,.065);
 }
 .bs-docs-sidenav > li > a {
-	display: block;
-	width: 190px \9;
-	margin: 0 0 -1px;
-	padding: 8px 14px;
-	border: 1px solid #e5e5e5;
+    display: block;
+    width: 190px \9;
+    margin: 0 0 -1px;
+    padding: 8px 14px;
+    border: 1px solid #e5e5e5;
 }
 .bs-docs-sidenav > li:first-child > a {
-	-webkit-border-radius: 6px 6px 0 0;
-	-moz-border-radius: 6px 6px 0 0;
-	border-radius: 6px 6px 0 0;
+    -webkit-border-radius: 6px 6px 0 0;
+    -moz-border-radius: 6px 6px 0 0;
+    border-radius: 6px 6px 0 0;
 }
 .bs-docs-sidenav > li:last-child > a {
-	-webkit-border-radius: 0 0 6px 6px;
-	-moz-border-radius: 0 0 6px 6px;
-	border-radius: 0 0 6px 6px;
+    -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
 }
 .bs-docs-sidenav > .active > a {
-	position: relative;
-	z-index: 2;
-	padding: 9px 15px;
-	border: 0;
-	text-shadow: 0 1px 0 rgba(0,0,0,.15);
-	-webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-	-moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-	box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+    position: relative;
+    z-index: 2;
+    padding: 9px 15px;
+    border: 0;
+    text-shadow: 0 1px 0 rgba(0,0,0,.15);
+    -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+    -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+    box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
 }
 /* Chevrons */
 .bs-docs-sidenav .icon-chevron-right {
-	float: right;
-	margin-top: 2px;
-	margin-right: -6px;
-	opacity: .25;
+    float: right;
+    margin-top: 2px;
+    margin-right: -6px;
+    opacity: .25;
 }
 .bs-docs-sidenav > li > a:hover {
-	background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 .bs-docs-sidenav a:hover .icon-chevron-right {
-	opacity: .5;
+    opacity: .5;
 }
 .bs-docs-sidenav .active .icon-chevron-right,
 .bs-docs-sidenav .active a:hover .icon-chevron-right {
-	opacity: 1;
+    opacity: 1;
 }
 .bs-docs-sidenav.affix {
-	top: 40px;
+    top: 40px;
 }
 .bs-docs-sidenav.affix-bottom {
-	position: absolute;
-	top: auto;
-	bottom: 270px;
+    position: absolute;
+    top: auto;
+    bottom: 270px;
 }
 
 /* Icons
 ------------------------- */
 .the-icons {
-	margin-left: 0;
-	list-style: none;
+    margin-left: 0;
+    list-style: none;
 }
 .the-icons li {
-	float: left;
-	width: 25%;
-	line-height: 25px;
+    float: left;
+    width: 25%;
+    line-height: 25px;
 }
 .the-icons i:hover {
-	background-color: rgba(255,0,0,.25);
+    background-color: rgba(255,0,0,.25);
 }
 
 
@@ -203,25 +203,25 @@ body {
 .error{border-color: red;}
 
 .fileinput-button {
-	position: relative;
-	overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .fileinput-button input {
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin: 0;
-	opacity: 0;
-	filter: alpha(opacity=0);
-	transform: translate(-300px, 0) scale(4);
-	font-size: 23px;
-	direction: ltr;
-	cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    transform: translate(-300px, 0) scale(4);
+    font-size: 23px;
+    direction: ltr;
+    cursor: pointer;
 }
 
 .message-preview .message{
-	display: block;
+    display: block;
 }
 
 .box-scroll-y{overflow-x: hidden;overflow-y: auto;}
@@ -231,9 +231,21 @@ body {
 .box-height-400{height: 400px;}
 
 .visible-false{
-	opacity: 0.5;
+    opacity: 0.5;
 }
 
 .detalhes label{
-	font-weight: bold;
+    font-weight: bold;
+}
+
+.dropdown-menu-msg{
+    width: 310px;
+}
+
+.dropdown-menu-msg  a {
+    white-space: normal!important;
+}
+
+.dropdown-menu-msg .dropdown-header{
+    text-align: center;
 }
